Make sure toggle doesn't show on mobile.
Still learning how to work with Tailwind and not fight it. It's good.

https://tailwindcss.com/docs/screens#custom-media-queries

https://tailwindcss.com/docs/theme#extending-the-default-theme

--- a/theme/tailwind.css
+++ b/theme/tailwind.css
@@ -232,15 +232,11 @@
 
     #menu-desktop-toggle {
       @apply
-        hidden
         align-middle
         absolute
         bottom-10
         left-0
         w-full;
-
-      /* Don't show at all if the screen is too short. */
-      @media screen and (min-height: 450px) { @apply block; }
 
       button {
         @apply
